Revision history for Perl module Perl-Dist

1.01    Tue 15 Apr 2008
	- Refactored a bit to use install_modules

1.00    Mon  7 Apr 2008
	- Release to match Strawberry Perl 5.10.0.1 April 2008

0.90_04 Mon 24 Mar 2008
	- Adding Perl::Dist::Inno::System for [Run] and [UninstallRun]
	  block support.
	  This is needed for more sophisticated install and uninstall
	  functionality.
	- Completing documentation for all the major install_foo methods.
	- Merging some idiosyncracies into the Perl::Dist::Inno core.
	- Converting force in install_module to use notest under the covers,
	  so that there are no errors to propogate upwards.
	- Added support for generating both zip and exe files simultaneously.

0.90_03 Fri  4 Jan 2008
	- Perl::Dist::Download was a bad idea, I wanted the ability to
	  to build distribution from a minicpan mirror, but maintaining
	  that package and incrementing it every time a minor release
	  happens of an upstream package will become a nightmare.
	- Merged in PAR support from Perl-Dist-Glutamate (Steffen Muller)
	- Adding more documentation
	- Completed first implementation of Perl::Dist::Machine, for
	  generating multiple variations of a dist at the same time.
	- This version used to create Vanilla Perl Build 15.
	- This version implements features needed for Strawberry Perl April.

0.90_02 Thu  3 Jan 2008
	- This release was used to build Vanilla Perl 14
	- Reorganising the default way that app_ver_name etc are done
	  to allow for distributions classes that can generate BOTH
	  5.8.8 and 5.10.0 distributions.
	- Changed the usage of perldist
	- Make sure Perl::Dist::Util::Toolchain in the tests uses the
	  full explicit Perl path.

0.90_01 Wed  2 Jan 2008
	- Major API refactoring
	- Converted Perl::Dist::Util::Toolchain to be completely
	  auto-resolving for what it should install.
	- Started the documentation process.

0.53 Sun 24 Dec 2007 (unreleased)
	- Adding support for websites in the start menu entries