@@ -1,8 +1,5 @@
-use strict;
 use inc::Module::Install;
 
-name           'Perl-Dist';
-author         'Adam Kennedy <adamk@cpan.org>';
 all_from       'lib/Perl/Dist.pm';
 requires       'Archive::Tar'               => '1.34'; 
 requires       'Archive::Zip'               => '1.20';
@@ -12,7 +9,7 @@ requires       'File::Path'                 => '1.08';
 requires       'File::pushd'                => '0.32';
 requires       'File::Spec'                 => '3.17';
 requires       'File::Remove'               => '0.37';
-requires       'File::ShareDir'             => '0.05';
+requires       'File::ShareDir'             => '0.99';
 requires       'File::Temp'                 => '0.20';
 requires       'HTTP::Status'               => '1.28';
 requires       'IPC::Run3'                  => '0.034';
@@ -21,22 +18,22 @@ requires       'LWP::UserAgent::Determined' => 0;
 requires       'LWP::Online'                => '0.03';
 requires       'Object::Tiny'               => '1.02';
 requires       'Tie::File'                  => 0;
+requires       'Tie::Slurp'                 => '0.03';
 requires       'YAML::Tiny'                 => '1.12';
 requires       'Module::CoreList'           => '2.13';
 requires       'Params::Util'               => '0.25';
-requires       'CPAN'                       => 0;
+requires       'CPAN'                       => '1.9205';
 requires       'PAR::Dist'                  => '0.25';
 requires       'Process'                    => '0.20';
 requires       'Process::Storable'          => 0;
 requires       'Process::Delegatable'       => 0;
 requires       'IO::Capture'                => '0.05';
 requires       'Win32::File::Object'        => '0.01' if $^O eq 'MSWin32';
-test_requires 'Test::More'                 => '0.42';
-test_requires 'Test::Script'               => '1.02';
-test_requires 'Test::LongString'           => 0;
-test_requires 'Probe::Perl'                => '0.01';
+test_requires  'Test::More'                 => '0.42';
+test_requires  'Test::Script'               => '1.02';
+test_requires  'Test::LongString'           => 0;
+test_requires  'Probe::Perl'                => '0.01';
 install_script 'perldist';
-no_index       'directory'                  => 'share';
 install_share;
 
 WriteAll;
