@@ -3,11 +3,12 @@ package Perl::Dist::Vanilla;
 use 5.006;
 use strict;
 use warnings;
-use base 'Perl::Dist';
+use Perl::Dist;
 
-use vars qw{$VERSION};
+use vars qw{$VERSION @ISA};
 BEGIN {
 	$VERSION = '17';
+	@ISA     = 'Perl::Dist';
 }
 
 
@@ -100,8 +101,8 @@ sub install_perl_5100_toolchain_object {
 	Perl::Dist::Util::Toolchain->new(
 		perl_version => $_[0]->perl_version_literal,
 		force        => {
-			'ExtUtils::CBuilder' => 'KWILLIAMS/ExtUtils-CBuilder-0.21.tar.gz',
-			'CPAN'               => 'ANDK/CPAN-1.92_60.tar.gz',
+			'File::Path' => 'DLAND/File-Path-2.04.tar.gz',
+			# 'CPAN'       => 'ANDK/CPAN-1.92_60.tar.gz',
 		},
 	);
 }
@@ -113,11 +114,6 @@ sub install_perl_modules {
 	# Upgrade to the latest version
 	$self->install_module(
 		name => 'CGI',
-	);
-
-	# Install Wx as preparation for Chocolate
-	$self->install_module(
-		name => 'Wx',
 	);
 
 	return 1;
@@ -137,7 +133,7 @@ sub remove_waste {
 		[ qw{ c bin startup templates os2  } ],
 		[ qw{ c bin startup templates unix } ],
 	) {
-		File::Remove::remove( \1, $self->_dir(@$dir) );
+		File::Remove::remove( \1, $self->dir(@$dir) );
 	}
 
 	return 1;
@@ -274,33 +270,14 @@ Bugs can be sent by email to C<<< bug-Perl-Dist-Vanilla@rt.cpan.org >>> or
 submitted using the web interface at
 L<http://rt.cpan.org/Public/Dist/Display.html?Name=Perl-Dist-Vanilla>
 
-=head1 LICENSE AND COPYRIGHT
+=head1 COPYRIGHT
 
-Vanilla Perl is open source and may be licensed under the same terms as Perl.
-Open source software included with Vanilla Perl installations are governed by
-their respective licenses.  See LICENSE.txt for details.
+Copyright 2008 Adam Kennedy.
 
-=head1 DISCLAIMER OF WARRANTY
+This program is free software; you can redistribute
+it and/or modify it under the same terms as Perl itself.
 
-BECAUSE THIS SOFTWARE IS LICENSED FREE OF CHARGE, THERE IS NO WARRANTY
-FOR THE SOFTWARE, TO THE EXTENT PERMITTED BY APPLICABLE LAW. EXCEPT WHEN
-OTHERWISE STATED IN WRITING THE COPYRIGHT HOLDERS AND/OR OTHER PARTIES
-PROVIDE THE SOFTWARE "AS IS" WITHOUT WARRANTY OF ANY KIND, EITHER
-EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE
-ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE SOFTWARE IS WITH
-YOU. SHOULD THE SOFTWARE PROVE DEFECTIVE, YOU ASSUME THE COST OF ALL
-NECESSARY SERVICING, REPAIR, OR CORRECTION.
-
-IN NO EVENT UNLESS REQUIRED BY APPLICABLE LAW OR AGREED TO IN WRITING
-WILL ANY COPYRIGHT HOLDER, OR ANY OTHER PARTY WHO MAY MODIFY AND/OR
-REDISTRIBUTE THE SOFTWARE AS PERMITTED BY THE ABOVE LICENCE, BE
-LIABLE TO YOU FOR DAMAGES, INCLUDING ANY GENERAL, SPECIAL, INCIDENTAL,
-OR CONSEQUENTIAL DAMAGES ARISING OUT OF THE USE OR INABILITY TO USE
-THE SOFTWARE (INCLUDING BUT NOT LIMITED TO LOSS OF DATA OR DATA BEING
-RENDERED INACCURATE OR LOSSES SUSTAINED BY YOU OR THIRD PARTIES OR A
-FAILURE OF THE SOFTWARE TO OPERATE WITH ANY OTHER SOFTWARE), EVEN IF
-SUCH HOLDER OR OTHER PARTY HAS BEEN ADVISED OF THE POSSIBILITY OF
-SUCH DAMAGES.
+The full text of the license can be found in the
+LICENSE file included with this module.
 
 =cut
